name:                obj-tools
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
-- copyright:           
category:            Graphics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  Exposed-modules:     Linear.Quaternion.Utils 
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <4.9
               ,       linear >= 1.20.5

  Hs-Source-Dirs:      src

executable png-to-obj
  main-is:             PngToObj.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
               ,       JuicyPixels == 3.2.7
               ,       containers
  -- hs-source-dirs:      
  default-language:    Haskell2010

executable obj-to-aframe
  main-is:             ObjToAFrame.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
               ,       aframe-blueprint >= 0.1.0.0
               ,       linear >= 1.20.5
               ,       QuickCheck
               ,       text
               ,       vector >= 0.11
               ,       wavefront >= 0.7.0.2
  -- hs-source-dirs:      
  default-language:    Haskell2010
